--- a/exemplo.html
+++ b/exemplo.html
@@ -4,13 +4,90 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Exemplo 1</title>
+    <Style> div {border: 3px solid blue};</Style>
+    <style> span{border: 3px solid red};</style>
 </head>
 <body>
+    <main>
     <div>
         <h1>
             Exemplo 1
         </h1>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. <br> Unde <Span>possimus beatae </span>  sed, omnis dolorem quisquam sit <em>quo in ut modi</em>  illo <strong>aspernatur</strong> <sup>architecto</sup>  soluta <sub>numquam </sub>iusto <mark>doloribus dignissimos </mark> <code>temporibus fugiat.</code></p>
+            <hr>
+            <figure>
+            <img src="img/salve.jpeg" alt="Minha foto"
+            title ="Explicação descrevendo a foto" />
+            <figcaption> Imaggem: salve</figcaption>
+            </figure>
+            <a href="https://www.uol.com.br" rel="Foi" target="_blank">Ir para uol</a>
+            <hr>
+            <ul>
+            <ol>
+                <li> salve</li>
+                <li>caramba</li>
+                <li>salvinho</li>
+            </ol>
+            </ul>
+            <dl>
+                <dt>html</dt>
+                <dd>Hyper...</dd>
+                <dt>SEO</dt>
+                <DD> search </DD>
+            </dl>
     </div>
-    
+    <hr>
+    <table>
+        <thead>
+            <tr>
+                <th>Time</th>
+                <th>PT</th>
+                <th>V</th>
+                <th>E</th>
+                <th>D</th>
+            </tr>
+        </thead>
+        <tbody>
+            <tr>
+                <th>Santos</td>
+                <td>Todos</td>
+                <td>Todas</td>
+                <td>Nenhuma</td>
+                <td>Nunca</td>
+
+            </tr>
+            <tr>
+                <td>Brangatino</td>
+                <td>0</td>
+                <td>0</td>
+                <td>0</td>
+                <td>0</td>
+            </tr>
+            <tr>
+                <td>Ponte</td>
+                <td>0</td>
+                <td>0</td>
+                <td>0</td>
+                <td>0</td>
+            </tr>
+            <tr>
+                <td>Mirassol</td>
+                <td>0</td>
+                <td>0</td>
+                <td>0</td>
+                <td>0</td>
+            </tr>
+        </tbody>
+        <tfoot>
+            <tr>
+                <td colspan="5">
+                    PT = Pontos, V=Vitorias, E=Empates, D=Derrotas
+                </td>
+            </tr>
+        </tfoot>
+    </table>
+    <iframe src="https://ge.globo.com/futebol/brasileirao-serie-a/"></iframe>
+    <iframe width="560" height="315" src="https://www.youtube.com/embed/YiG-tZ0lpSk?si=dyIxaTtt01sV7pc2" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+    </main>
 </body>
 </html>
